git  Will Entriken <cameralife AT phor.net>
* Automatically name files if possible
* Update PhotoStore API
* Remove hacks
* Do not delete photos
* Use CDN for bootstrap

2.6.6  Will Entriken <cameralife AT phor.net>
* Improve install process
* Clean up rarely-used extensions
* Fix UI errors

2.6.5  Will Entriken <cameralife AT phor.net>
* Support Google Analytics
* Create PHP code style guidelines and adopt
* Add Facebook photo sharing
* Validate HTML (Bootstrap theme)
* Drop unneded logs.value_old
* Remove iPhone support

2.6.4  Will Entriken <cameralife AT phor.net>
* Added support for OpenID login, this will be default soon
* Added upgrade tool
* Supports Gravitar
* Added 2 new iconsets
* Use left and right arrow to navigate between photos
* Bootstrap everywhere and it looks beautiful

2.6.3  Will Entriken <cameralife AT phor.net>
* Huge documentation update by Aysha Mohamed Rafiq
* Added hacks/widget.php - put this on your blog
* Add options for image sizes, thinks Jack Snodgrass
* Resolve issue at http://www.xssed.com/mirror/55648/
* Resolve issues at http://secunia.com/advisories/31234/
* Resolve other XSS and SQL injection issues
* Site now passes SQLInjectme, XSSme and Wapiti vulnerability tests
* Add autorotate for new and existing photos
* Added search like on php.net: http://example.com/cameralife/SEARCHTERM
* Fix install issues, thanks Eoin McLoughlin
* Update install documentation and process, takes one less click to install
* Rethemed Admin section, thanks Keith Bishop
* Supports GPS in photo metadata, links to Google maps
* Cleaned up RSS feed
* Return 404 code for unfound photos, albums, topics, folders
* Added documentation for an external thumbnailing server
* Link to online help from inside the site - for error messages
* Fixed Amazon S3 support
* Automatic htaccess setup
* Checkpoint and rollback is easier to manage with batch process

2.6.2  Will Entriken <cameralife AT phor.net>
* Website update, thanks to Rajesh Sundaram