@@ -4,6 +4,7 @@ git  Will Entriken <cameralife AT phor.net>
 * Remove hacks
 * Do not delete photos
 * Use CDN for bootstrap
+* Supports OpenGraph
 
 2.6.6  Will Entriken <cameralife AT phor.net>
 * Improve install process
